# bundesliga-news

./: .gitignore  README.md  pyproject.toml
data/: club_websites.md
docs/: index.html
src/: pipeline.py  pipeline.py.bak  pipeline_p.py  portal.py  portal_p.py
src/config/: teams.py
src/scrapers/: __init__.py  find_videos.py  search_videos.py  website_scraper.py
src/transcripts/: get_transcript.py
src/youtube/: scraper.py
tests/: test_youtube_scraper.py
