[project]
name = "bundesliga-news"
version = "0.1.0"
description = "Automatisiertes Bundesliga News Portal — täglich frische News aus allen 18 Vereins-Websites + YouTube."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "youtube-transcript-api>=0.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
bundesliga-news = "bundesliga_news.src.pipeline:main"
bundesliga-portal = "bundesliga_news.src.portal:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
